--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Access the projects below</h1>
+    <h2>6 Javascript Dom</h2>
+    <ul>
+        <li><a href="6javascript-dom/pokemon/index.html">500 Pokemon Image</a></li>
+    </ul>
+    <h2>9 Ajax API</h2>
     <ul>
         <li><a href="8ajax-api/3axios/dadjoke-generator/">Dad Joke Generator</a></li>
         <li><a href="8ajax-api/3axios/tv-show/">TV Show Finder</a></li>
